name:                hello
version:             0.1.0.0
synopsis:            VERY simple hello world
description:         See README
homepage:            https://github.com/githubuser/hello#readme
license:             BSD3
license-file:        LICENSE
author:              Roland Tritsch
maintainer:          roland@tritsch.org
copyright:           2017, Roland Tritsch
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:    src
  exposed-modules:   Hello
  build-depends:     base >= 4.7 && < 5
  default-language:  Haskell2010

executable hello-exe
  hs-source-dirs:    app
  main-is:           Main.hs
  ghc-options:       -Wall -threaded -rtsopts -with-rtsopts=-N
  build-depends:     base,
                     hello
  default-language:  Haskell2010

test-suite hello-test
  type:              exitcode-stdio-1.0
  hs-source-dirs:    test
  main-is:           Spec.hs
  build-depends:     base,
                     hello
  ghc-options:       -Wall -threaded -rtsopts -with-rtsopts=-N
  default-language:  Haskell2010